@@ -22,6 +22,8 @@
 - vipsthumbnail -o allows absolute file names
 - much better exif handling for jpg images (thanks Gary)
 - preserve jpeg app13 (photoshop ipct)
+- nearest neighbour goes back to round down ... round to nearest caused a
+  range of annoying problems, such as strange half-pixels along edges
 
 14/11/12 started 7.30.6
 - capture tiff warnings earlier
